Update servidor web

--- a/mabelmonte/src/main/resources/application.properties
+++ b/mabelmonte/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 spring.application.name=mabelmonte
 
 
-spring.datasource.url=jdbc:mysql://192.168.1.133:3306/MaBelmonte?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://rianputeroforever.duckdns.org:3306/MaBelmonte?useSSL=false&serverTimezone=UTC
 spring.datasource.username=pablo
 spring.datasource.password=pabloRick!
 spring.jpa.hibernate.ddl-auto=update
