--- a/mabelmonte/pom.xml
+++ b/mabelmonte/pom.xml
@@ -48,6 +48,12 @@
 		</dependency>
 
 		<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-thymeleaf</artifactId>
+</dependency>
+
+
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-crypto</artifactId>
 		</dependency>
